# R5RBaker

./: .gitmodules  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: cmake.yml
resources/: Eclippy.qss  PixelShader.hlsl
src/: main.cpp  pch.h
src/editors/: ctesteditor.cpp  ctesteditor.h
src/interfaces/: IHasActions.h  IHasProperties.h
src/logic/assets/: casset.cpp  casset.h  cassetgraph.cpp  cassetgraph.h
src/logic/assets/types/: crmdl.cpp  crmdl.h  crpak.cpp  crpak.h
src/logic/models/: cassetgraphmodel.cpp  cassetgraphmodel.h
src/panes/: cdependencypane.cpp  cdependencypane.h  cfilesystempane.cpp  cfilesystempane.h  cinspectorpane.cpp  cinspectorpane.h  clogpane.cpp  clogpane.h  cpropertiespane.cpp  cpropertiespane.h
src/utils/: docking.h  globals.h  macros.h  structs.h
src/views/: cdependencytreeview.cpp  cdependencytreeview.h
src/windows/: cassetlinksdialog.cpp  cassetlinksdialog.h  cassetlinksdialog.ui  cbuildassetdialog.cpp  cbuildassetdialog.h  cbuildassetdialog.ui  cnewassetdialog.cpp  cnewassetdialog.h  cnewassetdialog.ui  mainwindow.cpp  mainwindow.h
